fix(Legend): add nowrap css

--- a/packages/core/scss/components/_legend.scss
+++ b/packages/core/scss/components/_legend.scss
@@ -86,6 +86,7 @@ div.#{globals.$prefix}--#{globals.$charts-prefix}--legend {
 		div.legend-item {
 			margin-right: 0;
 			margin-bottom: 10px;
+			white-space: nowrap;
 		}
 	}
 
